force-app/main/default/objects/Record_Completeness_Related_Records__mdt/Record_Completeness_Related_Records__mdt.object-meta.xml
<CustomObject>
    <label>Record Completeness Related Records</label>
    <pluralLabel>Record Completeness Related Records</pluralLabel>
</CustomObject>