force-app/main/default/objects/Record_Completeness_Related_Records__mdt/fields/Record_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Record_Filter_Criteria__c</fullName>
    <label>Record Filter Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>