force-app/main/default/objects/Record_Completeness_Related_Records__mdt/fields/Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Record_Limit__c</fullName>
    <label>Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>