force-app/main/default/objects/Record_Completeness_Related_Records__mdt/fields/Related_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Name__c</fullName>
    <label>Related List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>