force-app/main/default/objects/Record_Completeness_Related_Records__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>